--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Faskes Points</title>
 
-  <title>Story App</title>
-  
   <link rel="stylesheet" href="./styles/styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="manifest" href="app.webmanifest" />
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.42.0/apexcharts.min.css"
+    crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.42.0/apexcharts.min.js"
+    crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.42.0/apexcharts.min.css"
+    integrity="sha512-nnNXPeQKvNOEUd+TrFbofWwHT0ezcZiFU5E/Lv2+JlZCQwQ/ACM33FxPoQ6ZEFNnERrTho8lF0MCEH9DBZ/wWw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  
+  <script src="https://cdn.tailwindcss.com/3.4.1"></script>
 
   <script>
     if (!document.startViewTransition) {
@@ -29,23 +35,21 @@
 <body class="bg-gray-50 text-gray-800 font-sans">
 
   <header>
-    <a href="javascript:void(0)" class="skip-link">Lewati ke konten utama</a>
-  
+    <a href="#main-content" class="skip-link">Lewati ke konten utama</a>
+
     <div class="header-container">
-      <h1 class="site-title">Story App</h1>
-  
+      <h1 class="site-title">Faskes Points</h1>
+
       <button id="menu-toggle" class="hamburger" aria-label="Navigasi halaman">
         <span></span>
         <span></span>
         <span></span>
       </button>
-  
+
       <nav id="main-nav" class="nav-links">
-        <a href="#/stories">Daftar Cerita</a>
-        <a href="#/add">Tambah Cerita</a>
-        <a href="#/login">Masuk</a>
-        <a href="#/register">Daftar</a>
-        <button id="nav-logout" class="logout-button">Keluar</button>
+        <a href="#/home">Home</a>
+        <a href="#/map">Map</a>
+        <a href="#/credit">Credit</a>
       </nav>
     </div>
   </header>
@@ -54,19 +58,18 @@
 
   <footer id="site-footer">
     <div class="max-w-5xl mx-auto text-center py-4">
-      <p>Story App &copy; Miftah</p>
+      <p>WebGIS Sederhana &copy; Miftah</p>
     </div>
   </footer>
 
   <script>
     const toggleBtn = document.getElementById('menu-toggle');
     const nav = document.getElementById('main-nav');
-  
+
     toggleBtn.addEventListener('click', () => {
       nav.classList.toggle('show');
     });
-  
-    // ilangin 3 strip kalo ukuran desktop
+
     document.querySelectorAll('#main-nav a, #main-nav button').forEach(link => {
       link.addEventListener('click', () => {
         if (window.innerWidth < 640) {
